<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a51202_000.testbug.MainActivity"
    android:background="@drawable/background">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logoapp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|top"
        android:id="@+id/mLogin_FormView"
        android:layout_marginTop="150dp">
        <android.support.design.widget.TextInputLayout
            android:textColorHint="@color/WhiteColor"
            android:id="@+id/input_layout_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/edtNameLg"
                android:text=""
                android:hint="@string/username"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/WhiteColor"
                android:textColorHint="@color/hindfocus"
                android:background="@drawable/logintinput"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:textColorHint="@color/WhiteColor"
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_user"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:id="@+id/edtPasswordLg"
                android:hint="@string/password"
                android:text=""
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/WhiteColor"
                android:textColorHint="@color/hindfocus"
                android:background="@drawable/logintinput"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="200dp"
            android:layout_marginTop="20dp"
            android:layout_height="40dp"
            android:layout_below="@+id/input_layout_password"
            android:text="@string/login"
            android:id="@+id/btnLoginLg"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:drawablePadding="-15sp"
            android:textColor="@color/btntextbackground"
            android:background="@drawable/loginbtn"
            android:textAllCaps="false"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/register"
            android:id="@+id/btnRegisterLg"
            android:textColor="@color/WhiteColor"
            android:textAllCaps="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_progress"
        android:visibility="gone"
        android:layout_centerInParent="true">
        <ProgressBar
            android:id="@+id/login_progress1"
            style="?android:attr/progressBarStyleInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/LoginStatus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/LoginStatus"
            android:textColor="@color/WhiteColor"
            android:layout_below="@+id/login_progress1"
            android:gravity="center"
            />
    </RelativeLayout>
</RelativeLayout>